--- a/blog.html
+++ b/blog.html
@@ -2,83 +2,72 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Laurel's Organized Chaos | Blog</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Laurel’s Organized Chaos – Blog</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Gothic heading font -->
-<link href="https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap" rel="stylesheet">
+  <!-- Fantasy serif fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
 
-<!-- Clean body font -->
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-
-
-  <!-- Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="page">
+  <header class="site-header">
+    <div class="logo-text">Laurel’s Organized Chaos</div>
+    <nav class="nav-links">
+      <a href="index.html" data-nav="home">Home</a>
+      <a href="blog.html" data-nav="blog">Blog</a>
+      <a href="store.html" data-nav="store">Store</a>
+      <a href="about.html" data-nav="about">About</a>
+    </nav>
+  </header>
 
-    <!-- Header -->
-    <header class="site-header">
-      <div class="logo-area">
-        <span class="logo-mark">☽✧</span>
-        <div class="logo-text">
-          <h1>Laurel's Organized Chaos</h1>
-          <p class="tagline">spooky systems for a beautifully messy life</p>
-        </div>
+  <main class="page-wrapper">
+    <!-- Blog hero -->
+    <section class="hero">
+      <div class="rune-frame">
+        <div class="rune-frame-side left">ᛞ ᛟ ᛉ ᛇ</div>
+        <div class="rune-frame-side right">ᛇ ᛉ ᛟ ᛞ</div>
+
+        <h1 class="hero-title">The Chronicle of Organized Chaos</h1>
+        <p class="hero-lead">
+          Motherhood, mental health, marriage, money, and messy glow-ups — filed here like tarot cards
+          pulled straight from my real life.
+        </p>
+        <p class="hero-sub">
+          Every post is a little ritual: documenting what broke, what healed, what I learned, and what I
+          absolutely refuse to tolerate anymore.
+        </p>
+      </div>
+    </section>
+
+    <!-- Blood-drip divider -->
+    <div class="divider-blood" aria-hidden="true">
+      <div class="divider-blood-line"></div>
+      <div class="drip d1"></div>
+      <div class="drip d2"></div>
+      <div class="drip d3"></div>
+    </div>
+
+    <!-- Tarot-style blog list (auto-filled by JS) -->
+    <section>
+      <div class="section-heading">
+        <h2>All Posts</h2>
+        <small>Shuffle through the chaos. Click a card to read.</small>
       </div>
 
-      <nav class="main-nav">
-        <a href="index.html" class="nav-link">Home</a>
-        <a href="about.html" class="nav-link">About</a>
-        <a href="blog.html" class="nav-link active">Blog</a>
-        <a href="store.html" class="nav-link">Store</a>
-        <a href="contact.html" class="nav-link">Contact</a>
-      </nav>
-    </header>
+      <div id="blog-list" class="tarot-grid"></div>
+    </section>
+  </main>
 
-    <main>
-
-      <!-- Blog Intro -->
-      <section class="section">
-        <h2 class="section-title">The Chaos Diaries</h2>
-        <p class="section-text">
-          A raw, witchy, unfiltered collection of my thoughts, stories, healing moments,
-          and chaotic life lessons. Written for the girls balancing softness and darkness,
-          motherhood and burnout, rebuilding and unraveling — all at the same time.
-        </p>
-
-        <p class="section-text" style="margin-top: 0.8rem;">
-          These posts are honest, emotional, and sometimes messy — just like real life.
-          Read what speaks to you, leave what doesn’t, and remember you’re not alone in the chaos.
-        </p>
-      </section>
-
-      <!-- Blog Grid -->
-      <section class="section">
-        <h3 class="section-title">All Posts</h3>
-
-        <!-- Cards auto-inserted by script.js -->
-        <div id="blog-posts" class="card-grid"></div>
-      </section>
-
-    </main>
-
-    <!-- Footer -->
-    <footer class="site-footer">
-      <p>© <span id="year"></span> Laurel's Organized Chaos · It’s your life, everyone else is just in it.</p>
-    </footer>
-
+  <!-- Animated neon witch sigil -->
+  <div class="sigil" aria-hidden="true">
+    <div class="sigil-ring"></div>
+    <div class="sigil-core"></div>
   </div>
 
-  <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
-  <script src="script.js"></script>
+  <footer class="site-footer">
+    © 2025 Laurel’s Organized Chaos · Blog of a beautifully haunted work in progress.
+  </footer>
 </body>
 </html>
-
