--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
   <!-- Fantasy serif fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
 
+  <!-- Make sure this file is literally named style.css -->
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="logo-text">Laurel’s Organized Chaos</div>
+    <div>
+      <div class="logo-text">Laurel’s Organized Chaos</div>
+      <div class="site-tagline">Goth mom, soft witch, professional chaos curator.</div>
+    </div>
+
     <nav class="nav-links">
       <a href="index.html" data-nav="home">Home</a>
       <a href="blog.html" data-nav="blog">Blog</a>
