--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Fantasy serif fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
 
-  <!-- Make sure this file is literally named style.css -->
-  <link rel="stylesheet" href="style.css" />
+  <!-- Make sure this file is literally named styles.css -->
+  <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
@@ -108,3 +108,4 @@
   </footer>
 </body>
 </html>
+
