--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
   <title>Laurel’s Organized Chaos – Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Fantasy serif fonts -->
+  <!-- Gothic fantasy fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
 
-  <!-- Make sure this file is literally named styles.css -->
   <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
 </head>
@@ -24,6 +23,7 @@
       <a href="blog.html" data-nav="blog">Blog</a>
       <a href="store.html" data-nav="store">Store</a>
       <a href="about.html" data-nav="about">About</a>
+      <a href="contact.html" data-nav="contact">Contact</a>
     </nav>
   </header>
 
@@ -34,7 +34,7 @@
         <div class="rune-frame-side left">ᛉ ᛟ ᛞ ᛇ</div>
         <div class="rune-frame-side right">ᛇ ᛞ ᛟ ᛉ</div>
 
-        <h1 class="hero-title">It’s My Life. Everyone Else Is Just In It.</h1>
+        <h1 class="hero-title">Surviving on Chaos, Caffeine, and Sheer Willpower</h1>
         <p class="hero-lead">
           Dark humor, witch energy, mom chaos, college brain, and a business to build — all crammed
           into one slightly sleep-deprived body wearing black leggings and eyeliner.
@@ -104,8 +104,7 @@
   </div>
 
   <footer class="site-footer">
-    © 2025 Laurel’s Organized Chaos · Goth mom, glowing runes, organized disaster.
+    © 2025 Laurel’s Organized Chaos · Chaos, but make it witchy.
   </footer>
 </body>
 </html>
-
