--- a/blog.html
+++ b/blog.html
@@ -5,38 +5,43 @@
   <title>Laurel’s Organized Chaos – Blog</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Fantasy serif fonts -->
+  <!-- Gothic fantasy fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cormorant+Garamond:wght@300;400;500&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="styles.css" />
   <script src="script.js" defer></script>
 </head>
 <body>
   <header class="site-header">
-    <div class="logo-text">Laurel’s Organized Chaos</div>
+    <div>
+      <div class="logo-text">Laurel’s Organized Chaos</div>
+      <div class="site-tagline">spooky systems for a beautifully messy life</div>
+    </div>
+
     <nav class="nav-links">
       <a href="index.html" data-nav="home">Home</a>
       <a href="blog.html" data-nav="blog">Blog</a>
       <a href="store.html" data-nav="store">Store</a>
       <a href="about.html" data-nav="about">About</a>
+      <a href="contact.html" data-nav="contact">Contact</a>
     </nav>
   </header>
 
   <main class="page-wrapper">
-    <!-- Blog hero -->
+    <!-- HERO -->
     <section class="hero">
       <div class="rune-frame">
-        <div class="rune-frame-side left">ᛞ ᛟ ᛉ ᛇ</div>
-        <div class="rune-frame-side right">ᛇ ᛉ ᛟ ᛞ</div>
+        <div class="rune-frame-side left">ᛟ ᛞ ᛉ ᛇ</div>
+        <div class="rune-frame-side right">ᛇ ᛉ ᛞ ᛟ</div>
 
-        <h1 class="hero-title">The Chronicle of Organized Chaos</h1>
+        <h1 class="hero-title">The Chaos Chronicles</h1>
         <p class="hero-lead">
-          Motherhood, mental health, marriage, money, and messy glow-ups — filed here like tarot cards
-          pulled straight from my real life.
+          Blog posts from the frontlines of motherhood, mental health, love, school, and trying to
+          build a life that actually fits — all filtered through a gothic, witchy, brutally honest lens.
         </p>
         <p class="hero-sub">
-          Every post is a little ritual: documenting what broke, what healed, what I learned, and what I
-          absolutely refuse to tolerate anymore.
+          No fake perfection here. Just real stories, dark humor, and the occasional emotional
+          plot twist. Pull a card below and see what chaos you land on.
         </p>
       </div>
     </section>
@@ -49,11 +54,11 @@
       <div class="drip d3"></div>
     </div>
 
-    <!-- Tarot-style blog list (auto-filled by JS) -->
+    <!-- All posts (tarot style) -->
     <section>
       <div class="section-heading">
         <h2>All Posts</h2>
-        <small>Shuffle through the chaos. Click a card to read.</small>
+        <small>Every story, spell, and meltdown in one place.</small>
       </div>
 
       <div id="blog-list" class="tarot-grid"></div>
@@ -67,7 +72,7 @@
   </div>
 
   <footer class="site-footer">
-    © 2025 Laurel’s Organized Chaos · Blog of a beautifully haunted work in progress.
+    © 2025 Laurel’s Organized Chaos · Chaos, but make it witchy.
   </footer>
 </body>
 </html>
